# deserison

./: MANIFEST.in  Pipfile  README.md  setup.cfg  tox.ini
src/: __init__.py  core.py
tests/: test_core.py
