[metadata]
name = deserison
version = attr: src.__version__

[options]
packages = find:
package_dir = = src
include_package_data = True
zip_safe = False
python_requires = >=3.4

[options.packages.find]
where = src

[options.extras_require]
dev =
  coverage
  tox

[coverage:run]
branch = True
source =
  src
  tests

[coverage:paths]
source =
  src
  .tox/*/lib/python*/site-packages/deserison